<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Free TV</string>
    <string name="developer" translatable="false">PH studio</string>
    <string name="app_version" translatable="false">1.0</string>
    <string name="fav_num" translatable="false">0</string>
    <string name="countries_num" translatable="false">7</string>
    <string name="streams_num" translatable="false">359</string>
    <string name="adultWarning">Do you have 18+?</string>
    <string name="really">Really?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="enterLink">Enter your link</string>
    <string name="hint">https://www.exapmle.com/tv.m3u8</string>
    <string name="empty">Your text is empty!</string>
    <string name="cancel">Cancel</string>
    <string name="closeApp">Do you want to close this application?</string>
    <string name="exitApp">Exit app</string>
    <string name="start">Start</string>
    <string name="channel1">Czech Republic</string>
    <string name="channel2">United Kingdom</string>
    <string name="channel3">Slovakia</string>
    <string name="channel4">Argentina</string>
    <string name="channel5">Australia</string>
    <string name="channel6">Germany</string>
    <string name="channel7">USA</string>
    <string name="channel8">International</string>
    <string name="about" translatable="false">https://phstudio2.github.io/</string>
    <string name="github" translatable="false">https://github.com/phstudio2</string>
    <string name="googlePlay" translatable="false">https://play.google.com/store/apps/dev?id=5702159986992384861</string>
    <string name="report" translatable="false">https://github.com/phstudio2/FreeTV/issues/new/choose</string>
    <string name="share_mail">Download this great app ;)!</string>
    <string name="email_text">Hi download Free TV from PH studio!</string>
    <string name="email_text2" translatable="false">https://play.google.com/store/apps/details?id=com.phstudio.freetv</string>
    <string name="email_text3" translatable="false">https://github.com/phstudio2/FreeTV</string>
    <string name="select_email">Share with…</string>
    <string name="telegram" translatable="false">https://t.me/s/phstudio2</string>
    <string name="privacy" translatable="false">https://github.com/phstudio2/FreeTV</string>
    <string name="terms" translatable="false">https://github.com/phstudio2/FreeTV</string>
    <string name="text_about">About</string>
    <string name="application_development">Application development</string>
    <string name="website">Website</string>
    <string name="github_text">GitHub</string>
    <string name="about1">More apps</string>
    <string name="about2">Report bug</string>
    <string name="about3">Share</string>
    <string name="about4">Telegram</string>
    <string name="about5">Privacy Policy</string>
    <string name="about6"><![CDATA[Terms & Conditions]]></string>
    <string name="okay">Okay</string>
    <string name="error">Error</string>
    <string name="notSupported">Not supported</string>
    <string name="record">"Record "</string>
    <string name="wasDeleted">" was deleted!"</string>
    <string name="importText">Do you want to import favorite?</string>
    <string name="exportText">Do you want to export your favorite?</string>
    <string name="deleteText">Do you want to delete all records?</string>
    <string name="deleteRec">Do you want to delete your record?</string>
    <string name="btDelete">Delete</string>
    <string name="btImport">Import</string>
    <string name="btExport">Export</string>
    <string name="emptyLV">You have no favorites!\n\nHold your finger on the button to add items.</string>
    <string name="permission_granted">Permissions granted\nPlease click the button again!</string>
    <string name="NotStream">Can\'t play this stream!\n\nError: </string>
    <string name="addedToFav">Added to favorites!</string>
    <string name="unknown">Unknown</string>
    <string name="add">add</string>
    <string name="favorite">Favorites</string>
    <string name="pornography">Adult</string>
    <string name="add_link">Add your link</string>
    <string name="news">News</string>
    <string name="movies">Movies</string>
    <string name="show">show</string>
    <string name="channels">Channels</string>
    <string name="statistics">Statistics</string>
    <string name="countries">Countries</string>
    <string name="streams">Streams</string>
    <string name="music">Music</string>
    <string name="saveOkay">Saved to Downloads</string>
    <string name="news1" translatable="false">Al Jazeera English</string>
    <string name="news2" translatable="false">Al Jazeera Arabic</string>
    <string name="news3" translatable="false">DW English</string>
    <string name="news4" translatable="false">DW German</string>
    <string name="news5" translatable="false">DW German+</string>
    <string name="news6" translatable="false">DW Spanish</string>
    <string name="news7" translatable="false">DW Arabic</string>
    <string name="news8" translatable="false">France 24 English</string>
    <string name="news9" translatable="false">France 24 French</string>
    <string name="news10" translatable="false">France 24 Spanish</string>
    <string name="news11" translatable="false">France 24 Arabic</string>
    <string name="news12" translatable="false">Euronews English</string>
    <string name="news13" translatable="false">Euronews French</string>
    <string name="news14" translatable="false">Euronews Spanish</string>
    <string name="news15" translatable="false">Euronews Italian</string>
    <string name="news16" translatable="false">Euronews Russian</string>
    <string name="news17" translatable="false">Euronews German</string>
    <string name="news18" translatable="false">Euronews Portuguese</string>
    <string name="news19" translatable="false">Euronews Greek</string>
    <string name="news20" translatable="false">Euronews Hungarian</string>
    <string name="news21" translatable="false">Africanews African</string>
    <string name="news22" translatable="false">Africanews French</string>
    <string name="news23" translatable="false">Sky News English</string>
    <string-array name="news_html" translatable="false">
        <item>https://phstudio2.github.io/</item>
        <item>https://www.youtube.com/c/FRANCE24English/live</item>
        <item>https://www.youtube.com/c/FRANCE24/live</item>
        <item>https://www.youtube.com/watch?v=XDJPzMznAjU</item>
        <item>https://www.youtube.com/c/FRANCE24Arabic/live</item>
        <item>https://www.youtube.com/watch?v=sPgqEHsONK8</item>
        <item>https://www.youtube.com/watch?v=MsN0_WNXvh8</item>
        <item>https://www.youtube.com/watch?v=JbKgQhFlMdU</item>
        <item>https://www.youtube.com/watch?v=B0zXsva0hYs</item>
        <item>https://www.youtube.com/watch?v=YG0lEwYLaxk</item>
        <item>https://www.youtube.com/watch?v=cLZYvDovKlo</item>
        <item>https://www.youtube.com/watch?v=JyC8mwZqJao</item>
        <item>https://www.youtube.com/watch?v=-UJlcdni8cM</item>
        <item>https://www.youtube.com/watch?v=xddy7-kDdkE</item>
        <item>https://www.youtube.com/watch?v=NQjabLGdP5g</item>
        <item tools:ignore="TypographyDashes">https://www.youtube.com/watch?v=b6R9-7KZ8YM</item>
        <item>https://www.youtube.com/watch?v=9Auq9mYxFEE</item>
    </string-array>
    <string-array name="news_m3u8" translatable="false">
        <item>https://phstudio2.github.io/</item>
        <item>https://live-hls-web-aje.getaj.net/AJE/index.m3u8</item>
        <item>https://live-hls-web-aja.getaj.net/AJA/02.m3u8</item>
        <item>https://dwamdstream102.akamaized.net/hls/live/2015525/dwstream102/index.m3u8</item>
        <item>https://dwamdstream106.akamaized.net/hls/live/2017965/dwstream106/index.m3u8</item>
        <item>https://dwamdstream105.akamaized.net/hls/live/2015531/dwstream105/index.m3u8</item>
        <item>https://dwamdstream104.akamaized.net/hls/live/2015530/dwstream104/index.m3u8</item>
        <item>https://dwamdstream103.akamaized.net/hls/live/2015526/dwstream103/index.m3u8</item>
    </string-array>
    <string name="movies1" translatable="false">FilmRise Movies</string>
    <string name="movies2" translatable="false">FilmRise Sci-Fi</string>
    <string name="movies3" translatable="false">Film Detective</string>
    <string name="movies4" translatable="false">Pluto TV 007</string>
    <string name="movies5" translatable="false">Pluto TV Spotlight</string>
    <string name="movies6" translatable="false">Pluto TV Action</string>
    <string name="movies7" translatable="false">Pluto TV Comedy</string>
    <string name="movies8" translatable="false">Pluto TV Drama</string>
    <string name="movies9" translatable="false">Pluto TV Fantastic</string>
    <string name="movies10" translatable="false">Pluto TV Romance</string>
    <string name="movies11" translatable="false">Pluto TV Crime Movies</string>
    <string name="movies12" translatable="false">Pluto TV Thrillers</string>
    <string name="movies13" translatable="false">Pluto TV Horror</string>
    <string name="movies14" translatable="false">Pluto TV Terror</string>
    <string name="movies15" translatable="false">Black Cinema</string>
    <string name="movies16" translatable="false">Pluto TV Staff Picks</string>
    <string name="movies17" translatable="false">Pluto TV Documentaries</string>
    <string name="movies18" translatable="false">90s Throwback</string>
    <string name="movies19" translatable="false">80s Rewind</string>
    <string name="movies20" translatable="false">70s Cinema</string>
    <string name="movies21" translatable="false">Paramount Movie Channel</string>
    <string name="movies22" translatable="false">Pluto TV Westerns</string>
    <string name="movies23" translatable="false">Classic Movies</string>
    <string name="movies24" translatable="false">Pluto TV Cult Films</string>
    <string name="movies25" translatable="false">Flicks of Fury</string>
    <string name="movies26" translatable="false">The Asylum</string>
    <string name="usa1" translatable="false">CNN</string>
    <string name="usa2" translatable="false">ABC News</string>
    <string name="usa3" translatable="false">Reuters TV</string>
    <string name="usa4" translatable="false">NASA TV Public</string>
    <string name="usa5" translatable="false">NASA TV Media</string>
    <string name="usa6" translatable="false">BBC Food</string>
    <string name="usa7" translatable="false">BBC Home</string>
    <string name="usa8" translatable="false">CCX Media Minnesota</string>
    <string name="usa9" translatable="false">Newsy</string>
    <string name="usa10" translatable="false">Retro TV</string>
    <string name="usa11" translatable="false">Heartland</string>
    <string name="usa12" translatable="false">Rev\'n</string>
    <string name="usa13" translatable="false">23 ABC (KERO)</string>
    <string name="usa14" translatable="false">30A TV</string>
    <string name="usa15" translatable="false">30A Investment Pitch</string>
    <string name="usa16" translatable="false">30A Sidewalks</string>
    <string name="usa17" translatable="false">AKC TV</string>
    <string name="usa18" translatable="false">American Horrors</string>
    <string name="usa19" translatable="false">Darcizzle Offshore</string>
    <string name="usa20" translatable="false">CBS 3 KMTV</string>
    <string name="usa21" translatable="false">5USA</string>
    <string name="usa22" translatable="false">A&amp;E</string>
    <string name="usa23" translatable="false">CNBC</string>
    <string name="usa24" translatable="false">CBS News</string>
    <string name="usa25" translatable="false">Bloomberg</string>
</resources>