<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.channels.PHstudio">

    <View
        android:id="@+id/vTop"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_65sdp"
        android:background="@color/primary"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:text="@string/phstudio2"
        android:textColor="@color/white"
        android:textSize="@dimen/_20ssp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="@dimen/_26sdp"
        android:layout_height="@dimen/_26sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:src="@drawable/phstudio2"
        app:layout_constraintBottom_toBottomOf="@id/tvPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvPrimary"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:overScrollMode="never"
        android:padding="@dimen/_16sdp"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vTop">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">


            <Button
                android:id="@+id/btChannel4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/card_background"
                android:drawableLeft="@drawable/channel4"
                android:gravity="center"
                android:text="@string/channel4"
                android:textAllCaps="false"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/_12ssp"
                tools:ignore="RtlHardcoded" />

            <Button
                android:id="@+id/btChannel5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/card_background"
                android:drawableLeft="@drawable/channel5"
                android:gravity="center"
                android:text="@string/channel5"
                android:textAllCaps="false"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/_12ssp"
                tools:ignore="RtlHardcoded" />

            <Button
                android:id="@+id/btChannel1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/card_background"
                android:drawableLeft="@drawable/channel1"
                android:gravity="center"
                android:text="@string/channel1"
                android:textAllCaps="false"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/_12ssp"
                tools:ignore="RtlHardcoded" />

            <Button
                android:id="@+id/btChannel2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/card_background"
                android:drawableLeft="@drawable/channel2"
                android:gravity="center"
                android:text="@string/channel2"
                android:textAllCaps="false"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/_12ssp"
                tools:ignore="RtlHardcoded" />

            <Button
                android:id="@+id/btChannel3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/card_background"
                android:drawableLeft="@drawable/channel3"
                android:gravity="center"
                android:text="@string/channel3"
                android:textAllCaps="false"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/_12ssp"
                tools:ignore="RtlHardcoded" />

            <Button
                android:id="@+id/btChannel6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/card_background"
                android:drawableLeft="@drawable/channel6"
                android:gravity="center"
                android:text="@string/channel6"
                android:textAllCaps="false"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/_12ssp"
                tools:ignore="RtlHardcoded" />

            <Button
                android:id="@+id/btChannel7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/card_background"
                android:drawableLeft="@drawable/channel7"
                android:gravity="center"
                android:text="@string/channel7"
                android:textAllCaps="false"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/_12ssp"
                tools:ignore="RtlHardcoded" />

            <Button
                android:id="@+id/btChannel8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/card_background"
                android:drawableLeft="@drawable/channel8"
                android:gravity="center"
                android:text="@string/channel8"
                android:textAllCaps="false"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/_12ssp"
                tools:ignore="RtlHardcoded" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>